tests/script/negative/adt/empty_match.s
type t { C }

@initial
run(t arg) {
  case(arg) { }
}
